# QWave

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.934301f  MainWindow.cpp  MainWindow.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  ScientificFormatter.cpp  ScientificFormatter.h  SyNet.qss  build.ninja  chartcontainer.cpp  chartcontainer.h  chartcrosshair.cpp  chartcrosshair.h  chartmarker.cpp  chartmarker.h  clickeventfilter.cpp  clickeventfilter.h  cmake_install.cmake  csvdatalayout.cpp  csvdatalayout.h  cursordockwidget.cpp  cursordockwidget.h  customchart.cpp  customchart.h  customseries.cpp  customseries.h  data_gen.py  dataimporter.cpp  dataimporter.h  dataview.cpp  dataview.h  datawidget.cpp  datawidget.h  detailsdialog.cpp  detailsdialog.ui  (+25 more)
customwidgets/chart/: ChartContainer.cpp  ChartContainer.h  ChartCrosshair.cpp  ChartCrosshair.h  ChartMarker.cpp  ChartMarker.h  CustomChart.cpp  CustomChart.h  CustomSeries.cpp  XCursor.cpp  XCursor.h
customwidgets/dataimport/: CSVData.cpp  CSVData.h  HiracData.cpp  HiracData.h
customwidgets/dialog/: DetailsDialog.cpp  OptionsDialog.cpp  OptionsDialog.h
customwidgets/misc/: Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  ScientificFormatter.cpp  ThemeManager.cpp  ThemeManager.h
customwidgets/stackwidgets/: MultiColumnToolbar.cpp  MultiColumnToolbar.h  SettingsTree.cpp  SettingsTree.h
customwidgets/ui-files/: DetailsDialog.ui  MainWindow.ui  OptionsDialog.ui  XYCursor.ui
data/: gen.csv  gen2.csv  large_set.csv  log_data.csv  pow batt load2_1.csv  pow batt load3.h5  test.csv  test_oszi_data.csv
scripts/: icon_colors.py
themes/: ThemeColors.h  altium.qss  cadence.qss  mac.qss  monokai.qss  themes.json  tight_theme.qss
